--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -109,15 +109,14 @@ Some of the underlying work necessary to support mainstream development of forma
 \paragraph{Consistency of off-chain assets and corresponding on-chain tokens}
 When a blockchain is used to track off-chain assets (physical or digital), those assets are typically represented on-chain by digital tokens. When dealing with digital assets, correspondence between the asset and its token can generally be maintained by code; for example, a smart contract can track transference of ownership for a digital media license. For physical assets, however, maintaining this consistency is a challenge. Real-world processes must be employed to ensure that whenever an asset's state or ownership is modified, the corresponding token is updated. These processes are an obvious point of failure as they rely on correct enforcement by trusted parties. The person in charge of maintaining the blockchain could attach two tokens to one asset, two assets to one token, or issue tokens that have no backing asset (e.g. stocks in a naked short selling scenario). The end user must also be trusted, as they may be able to separate the token and sell it while keeping the asset, freeing the token to be attached to an invalid asset (e.g., fake goods in luxury markets). 
 
-\paragraph{Ideology, hype, and ulterior motives}
+\paragraph{???: Ideology, hype, and ulterior motives}
 Many proponents of Blockchain believe that it has the capability to massively disrupt how society operates, or at least to rapidly overtake legacy solutions in many significant industries. This belief is hyperbole ("hype") because although it has been validated under certain conditions, it has not been demonstrated to be generally true but it is still fervently proclaimed. This ideology and hype cause problems: for example, frequent emotionally-charged schisms within Blockchain advocate and developer communities - especially those affiliated with Bitcoin. This turmoil prevents level-headed scientific discourse and wastes developer resources. It can also tangibly affect the stability of a blockchain-based system by causing a fork, in which two independent chains emerge to used and maintained by different groups, further dividing resources.
 
 With that said, Blockchain's disruptive power has certainly been demonstrated in the financial sector, so it clearly has promise. Several factors have made this sector an attractive target for disruption, perhaps none more so than the opportunity for massive profit. This motive has had benefits for Blockchain technology, especially in accelerating the pace of technological development. However, it has also created perverse incentives to reinforce hype and ideology. Hype can attract investors and inflate valuations, and dogmatic ideology is a proven marketing and recruitment strategy for financial scammers. These problems inhibit the advancement of Blockchain technology.
 
-\paragraph{Reputation for illicit uses}
+\paragraph{???: Reputation for illicit uses}
 Due to the prominence of Bitcoin, many people are familiar with Blockchain first and foremost as the technology underlying the cryptocurrency and therefore the reputations of the two are intertwined. The fact that Bitcoin is designed to avoid banks and central authorities in general, combined with its well-known history of illicit uses, somewhat poisons the well for Blockchain as a whole. Along with the causes listed above (ideology, hype, and ulterior motives), this contributes to the difficulty of discussing and considering Blockchain technology with precision and objectivity. It may also have impeded or delayed its acceptance by organizations unwilling to associate themselves with the technology's poor reputation.
 
-\subsubsection{Key Limitations}
 \paragraph{Dispute resolution and rollback of mistakes}
 A payment or asset transfer system must be able to reverse fraudulent or mistaken transactions. The immutability property of Blockchain means that transactions cannot be stricken from the ledger after consensus has been reached, so alternative means of dispute resolution must be explored. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs. 
 
@@ -126,12 +125,14 @@ Smart contracts sometimes leverage off-chain oracles: online services that provi
 
 One system tackling this problem is Town Crier \cite{Zhang16}. It uses a trusted hardware back end (Intel SGX) to serve as an authenticated off-chain oracle for Ethereum smart contracts. This allows an auditor to later verify the oracle's response at the time at which the contract was executed. This solution sidesteps the limitation of oracle non-auditability by moving trust to a centralized location (the hardware platform providing authenticity), but it does not diffuse trust in the way our analysis reveals that Blockchain technology is expected to.
 
-\paragraph{Inefficiency of replicated storage}
-Typically, data on a blockchain is stored redundantly by all peers maintaining the chain. For some use cases, and particularly when a blockchain is being used as a distributed data store, this results in prohibitively large data storage requirements for those peers. In Bitcoin, for example, a user wishing to verify transaction integrity back to the first block must store over 160GB of data\cite{BlockchainInfoSize} with approximately an additional 4GB added each month\footnote{For Bitcoin, solutions have been explored that would reduce storage requirements (e.g., Simple Payment Verification\cite{NakamotoS8}) and blockchain growth rate (e.g., Lightning network\cite{Poon16}). However, the inherent limitation that any truly verifiable data must reside on the blockchain in some form and be stored by all peers remains.}. This limitation inhibits blockchain-based solutions to problems with large data storage requirements, such as medical record storage.
-  
 \paragraph{Scalability of public blockchains: transaction costs and bandwidth, emergent centralization, energy consumption}
 As the Bitcoin user base and transaction volume have grown, limitations on its scalability have been revealed. To some degree, these limitations are a result of Bitcoin's chosen parameters; for example, the 1MB cap on block size has periodically caused prohibitively high transaction fees and wait times. This limitation was mitigated by the Bitcoin Cash hard fork in 2017, which created 8MB blocks, but other scalability problems may not be so easily solvable by simple parameter tweaking, suggesting that they may be inherent limitations of public blockchain technology. We will discuss two limitations that stem from the proof-of-work consensus model that is typically used in public blockchains: emergent centralization of control and high rates of energy consumption.
 
 Currently, almost 70\% of Bitcoin blocks are mined by the five largest pools \cite{BlockchainInfoPools}. Of course, these pools are disincentivized to damage trust in Bitcoin (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and may violate security notions that depend on decentralization. This problem is caused in part by the hardware-optimized Bitcoin mining puzzle, for which alternatives are being explored, but whether or not this limitation can be overcome at scale is still an open question.
 
 Bitcoin is also an illustrative example for another inefficiency of public blockchains at scale: the energy consumption of proof-of-work consensus. According to one estimate\cite{Digiconomist}, as of April 2018 the energy consumed by Bitcoin miners is equivalent to the power usage of almost 5.5 million US households, and all signs indicate that it will continue to grow. A similar problem is likely to arise in any scheme where proof-of-work is deployed. It may be surpassable if alternative consensus protocols such as proof-of-stake are used, but there are other problems to work out with such schemes (in particular, a worsening of the emergent centralization problem discussed above). 
+
+\paragraph{???: Inefficiency of replicated storage}
+Typically, data on a blockchain is stored redundantly by all peers maintaining the chain. For some use cases, and particularly when a blockchain is being used as a distributed data store, this results in prohibitively large data storage requirements for those peers. In Bitcoin, for example, a user wishing to verify transaction integrity back to the first block must store over 160GB of data\cite{BlockchainInfoSize} with approximately an additional 4GB added each month\footnote{For Bitcoin, solutions have been explored that would reduce storage requirements (e.g., Simple Payment Verification\cite{NakamotoS8}) and blockchain growth rate (e.g., Lightning network\cite{Poon16}). However, the inherent limitation that any truly verifiable data must reside on the blockchain in some form and be stored by all peers remains.}. This limitation inhibits blockchain-based solutions to problems with large data storage requirements, such as medical record storage.
+
+
