Reorganized challenges section

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -43,6 +43,7 @@ Scott's suggestions:
 \input{sections/academic}
 \input{sections/methodology}
 \input{sections/results}
+\input{sections/challenges}
 \input{sections/criteria}
 \input{sections/use-cases}
 \input{sections/discussion}
