Starting to compile academic challenges papes

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -458,3 +458,226 @@
 	Year = {2016},
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2976749.2978326},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2976749.2978326}}
+	
+	
+
+% Arkady's bib items
+% Smart contract correctness
+
+@inproceedings{CCS:LCOSH16,
+  author    = {Loi Luu and
+               Duc{-}Hiep Chu and
+               Hrishi Olickel and
+               Prateek Saxena and
+               Aquinas Hobor},
+  title     = {Making Smart Contracts Smarter},
+  booktitle = {Proceedings of the 2016 {ACM} {SIGSAC} Conference on Computer and
+               Communications Security, Vienna, Austria, October 24-28, 2016},
+  pages     = {254--269},
+  year      = {2016},
+  url       = {http://doi.acm.org/10.1145/2976749.2978309},
+  doi       = {10.1145/2976749.2978309},
+  timestamp = {Mon, 24 Oct 2016 18:57:12 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/ccs/LuuCOSH16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+% Consistency of off-chain assets and on-chain tokens
+@inproceedings{FC:GBGN17,
+  author    = {Steven Goldfeder and
+               Joseph Bonneau and
+               Rosario Gennaro and
+               Arvind Narayanan},
+  title     = {Escrow Protocols for Cryptocurrencies: How to Buy Physical Goods Using
+               Bitcoin},
+  booktitle = {Financial Cryptography and Data Security - 21st International Conference,
+               {FC} 2017, Sliema, Malta, April 3-7, 2017, Revised Selected Papers},
+  pages     = {321--339},
+  year      = {2017},
+  url       = {https://doi.org/10.1007/978-3-319-70972-7_18},
+  doi       = {10.1007/978-3-319-70972-7_18},
+  timestamp = {Tue, 02 Jan 2018 13:52:22 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/fc/GoldfederBGN17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+% Dispute resolution and rollback of mistakes
+
+
+% Non-auditability of off-chain oracles
+
+% Scalability of public blockchain
+
+% Survey
+@inproceedings{FC:CDEGJKMSSS16,
+  author    = {Kyle Croman and
+               Christian Decker and
+               Ittay Eyal and
+               Adem Efe Gencer and
+               Ari Juels and
+               Ahmed E. Kosba and
+               Andrew Miller and
+               Prateek Saxena and
+               Elaine Shi and
+               Emin G{\"{u}}n Sirer and
+               Dawn Song and
+               Roger Wattenhofer},
+  title     = {On Scaling Decentralized Blockchains - {(A} Position Paper)},
+  booktitle = {Financial Cryptography and Data Security - {FC} 2016 International
+               Workshops, BITCOIN, VOTING, and WAHC, Christ Church, Barbados, February
+               26, 2016, Revised Selected Papers},
+  pages     = {106--125},
+  year      = {2016},
+  url       = {https://doi.org/10.1007/978-3-662-53357-4_8},
+  doi       = {10.1007/978-3-662-53357-4_8},
+  timestamp = {Wed, 30 May 2018 16:11:58 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/fc/CromanDEGJKMSSS16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+% Proof of Stake
+
+
+% Payment networks
+
+@inproceedings{NDSS:HABSG17,
+  author    = {Ethan Heilman and
+               Leen Alshenibr and
+               Foteini Baldimtsi and
+               Alessandra Scafuro and
+               Sharon Goldberg},
+  title     = {TumbleBit: An Untrusted Bitcoin-Compatible Anonymous Payment Hub},
+  booktitle = {24th Annual Network and Distributed System Security Symposium, {NDSS}
+               2017, San Diego, California, USA, February 26 - March 1, 2017},
+  year      = {2017},
+  url       = {https://www.ndss-symposium.org/ndss2017/ndss-2017-programme/tumblebit-untrusted-bitcoin-compatible-anonymous-payment-hub/},
+  timestamp = {Tue, 16 Jan 2018 15:44:17 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/ndss/HeilmanABSG17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{SYSTOR:LNEKPS18,
+  author    = {Joshua Lind and
+               Oded Naor and
+               Ittay Eyal and
+               Florian Kelbert and
+               Peter R. Pietzuch and
+               Emin G{\"{u}}n Sirer},
+  title     = {Teechain: Reducing Storage Costs on the Blockchain With Offline Payment
+               Channels},
+  booktitle = {Proceedings of the 11th {ACM} International Systems and Storage Conference,
+               {SYSTOR} 2018, HAIFA, Israel, June 04-07, 2018},
+  pages     = {125},
+  year      = {2018},
+  url       = {http://doi.acm.org/10.1145/3211890.3211904},
+  doi       = {10.1145/3211890.3211904},
+  timestamp = {Mon, 18 Jun 2018 08:11:01 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/systor/LindNEKPS18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{CCS:KhaGer17,
+  author    = {Rami Khalil and
+               Arthur Gervais},
+  title     = {Revive: Rebalancing Off-Blockchain Payment Networks},
+  booktitle = {Proceedings of the 2017 {ACM} {SIGSAC} Conference on Computer and
+               Communications Security, {CCS} 2017, Dallas, TX, USA, October 30 -
+               November 03, 2017},
+  pages     = {439--453},
+  year      = {2017},
+  url       = {http://doi.acm.org/10.1145/3133956.3134033},
+  doi       = {10.1145/3133956.3134033},
+  timestamp = {Tue, 13 Mar 2018 15:08:56 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/ccs/KhalilG17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{CCS:MMKMR17,
+  author    = {Giulio Malavolta and
+               Pedro Moreno{-}Sanchez and
+               Aniket Kate and
+               Matteo Maffei and
+               Srivatsan Ravi},
+  title     = {Concurrency and Privacy with Payment-Channel Networks},
+  booktitle = {Proceedings of the 2017 {ACM} {SIGSAC} Conference on Computer and
+               Communications Security, {CCS} 2017, Dallas, TX, USA, October 30 -
+               November 03, 2017},
+  pages     = {455--471},
+  year      = {2017},
+  url       = {http://doi.acm.org/10.1145/3133956.3134096},
+  doi       = {10.1145/3133956.3134096},
+  timestamp = {Tue, 13 Mar 2018 15:08:56 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/ccs/MalavoltaMKMR17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{CCS:GreMie17,
+  author    = {Matthew Green and
+               Ian Miers},
+  title     = {Bolt: Anonymous Payment Channels for Decentralized Currencies},
+  booktitle = {Proceedings of the 2017 {ACM} {SIGSAC} Conference on Computer and
+               Communications Security, {CCS} 2017, Dallas, TX, USA, October 30 -
+               November 03, 2017},
+  pages     = {473--489},
+  year      = {2017},
+  url       = {http://doi.acm.org/10.1145/3133956.3134093},
+  doi       = {10.1145/3133956.3134093},
+  timestamp = {Tue, 13 Mar 2018 15:08:56 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/ccs/0001M17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+% Sharding
+@inproceedings{CCS:LNZBGS16,
+  author    = {Loi Luu and
+               Viswesh Narayanan and
+               Chaodong Zheng and
+               Kunal Baweja and
+               Seth Gilbert and
+               Prateek Saxena},
+  title     = {A Secure Sharding Protocol For Open Blockchains},
+  booktitle = {Proceedings of the 2016 {ACM} {SIGSAC} Conference on Computer and
+               Communications Security, Vienna, Austria, October 24-28, 2016},
+  pages     = {17--30},
+  year      = {2016},
+  url       = {http://doi.acm.org/10.1145/2976749.2978389},
+  doi       = {10.1145/2976749.2978389},
+  timestamp = {Mon, 24 Oct 2016 18:57:12 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/ccs/LuuNZBGS16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{FC:GenRenSir17,
+  author    = {Adem Efe Gencer and
+               Robbert van Renesse and
+               Emin G{\"{u}}n Sirer},
+  title     = {Short Paper: Service-Oriented Sharding for Blockchains},
+  booktitle = {Financial Cryptography and Data Security - 21st International Conference,
+               {FC} 2017, Sliema, Malta, April 3-7, 2017, Revised Selected Papers},
+  pages     = {393--401},
+  year      = {2017},
+  url       = {https://doi.org/10.1007/978-3-319-70972-7_22},
+  doi       = {10.1007/978-3-319-70972-7_22},
+  timestamp = {Tue, 02 Jan 2018 13:52:22 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/fc/GencerRS17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+% IOTA-style ledger
+
+% Unsure
+@inproceedings{NSDI:EGSR16,
+  author    = {Ittay Eyal and
+               Adem Efe Gencer and
+               Emin G{\"{u}}n Sirer and
+               Robbert van Renesse},
+  title     = {Bitcoin-NG: {A} Scalable Blockchain Protocol},
+  booktitle = {13th {USENIX} Symposium on Networked Systems Design and Implementation,
+               {NSDI} 2016, Santa Clara, CA, USA, March 16-18, 2016},
+  pages     = {45--59},
+  year      = {2016},
+  url       = {https://www.usenix.org/conference/nsdi16/technical-sessions/presentation/eyal},
+  timestamp = {Tue, 28 Mar 2017 14:03:28 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/nsdi/EyalGSR16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
