--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -482,6 +482,89 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{SP:KMSWP16,
+  author    = {Ahmed E. Kosba and
+               Andrew Miller and
+               Elaine Shi and
+               Zikai Wen and
+               Charalampos Papamanthou},
+  title     = {Hawk: The Blockchain Model of Cryptography and Privacy-Preserving
+               Smart Contracts},
+  booktitle = {{IEEE} Symposium on Security and Privacy, {SP} 2016, San Jose, CA,
+               USA, May 22-26, 2016},
+  pages     = {839--858},
+  year      = {2016},
+  url       = {https://doi.org/10.1109/SP.2016.55},
+  doi       = {10.1109/SP.2016.55},
+  timestamp = {Fri, 26 May 2017 00:50:06 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/sp/KosbaMSWP16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{FC:DAKMS16,
+  author    = {Kevin Delmolino and
+               Mitchell Arnett and
+               Ahmed E. Kosba and
+               Andrew Miller and
+               Elaine Shi},
+  title     = {Step by Step Towards Creating a Safe Smart Contract: Lessons and Insights
+               from a Cryptocurrency Lab},
+  booktitle = {Financial Cryptography and Data Security - {FC} 2016 International
+               Workshops, BITCOIN, VOTING, and WAHC, Christ Church, Barbados, February
+               26, 2016, Revised Selected Papers},
+  pages     = {79--94},
+  year      = {2016},
+  url       = {https://doi.org/10.1007/978-3-662-53357-4\_6},
+  doi       = {10.1007/978-3-662-53357-4\_6},
+  timestamp = {Wed, 30 May 2018 16:11:58 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/fc/DelmolinoAKMS16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{arxiv:Huang18,
+  author    = {TonTon Hsien-De Huang},
+  title     = {Hunting the Ethereum Smart Contract: Color-inspired Inspection of Potential Attacks},
+  journal   = {ar{X}iv},
+  volume    = {2018},
+  year	= {2018}
+}
+
+@inproceedings{CCS:BDFGGK+16,
+  author    = {Karthikeyan Bhargavan and
+               Antoine Delignat{-}Lavaud and
+               C{\'{e}}dric Fournet and
+               Anitha Gollamudi and
+               Georges Gonthier and
+               Nadim Kobeissi and
+               Natalia Kulatova and
+               Aseem Rastogi and
+               Thomas Sibut{-}Pinote and
+               Nikhil Swamy and
+               Santiago Zanella B{\'{e}}guelin},
+  title     = {Formal Verification of Smart Contracts: Short Paper},
+  booktitle = {Proceedings of the 2016 {ACM} Workshop on Programming Languages and
+               Analysis for Security, PLAS@CCS 2016, Vienna, Austria, October 24,
+               2016},
+  pages     = {91--96},
+  year      = {2016},
+  url       = {http://doi.acm.org/10.1145/2993600.2993611},
+  doi       = {10.1145/2993600.2993611},
+  timestamp = {Sun, 27 May 2018 19:07:06 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/ccs/BhargavanDFGGKK16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{NDSS:KGDS18,
+  author	= {Sukrit Kalra and 
+  		Seep Goel and 
+		Mohan Dhawan and 
+		Subodh Sharma},
+  title 	= {{ZEUS}: Analyzing Safety of Smart Contracts},
+  booktitle	= {NDSS 2018},
+  year	= {2018}
+}
+
+
 % Consistency of off-chain assets and on-chain tokens
 @inproceedings{FC:GBGN17,
   author    = {Steven Goldfeder and
@@ -502,6 +585,32 @@
 }
 
 % Dispute resolution and rollback of mistakes
+@article{arxiv:AviSafSha18,
+  author    = {Sepideh Avizheh and 
+  		Reihaneh Safavi-Naini and 
+		Siamak F. Shahandashti},
+  title     = {A New Look at the Refund Mechanism in the Bitcoin Payment Protocol},
+  journal   = {ar{X}iv},
+  volume    = {2018},
+  year	= {2018}
+}
+
+@inproceedings{FC:MccShaHao16,
+  author    = {Patrick McCorry and
+               Siamak F. Shahandashti and
+               Feng Hao},
+  title     = {Refund Attacks on Bitcoin's Payment Protocol},
+  booktitle = {Financial Cryptography and Data Security - 20th International Conference,
+               {FC} 2016, Christ Church, Barbados, February 22-26, 2016, Revised
+               Selected Papers},
+  pages     = {581--599},
+  year      = {2016},
+  url       = {https://doi.org/10.1007/978-3-662-54970-4\_34},
+  doi       = {10.1007/978-3-662-54970-4\_34},
+  timestamp = {Wed, 17 May 2017 11:13:47 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/fc/McCorrySH16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 
 % Non-auditability of off-chain oracles
@@ -536,6 +645,107 @@
 }
 
 % Proof of Stake
+@inproceedings{CRYPTO:KRDO17,
+  author    = {Aggelos Kiayias and
+               Alexander Russell and
+               Bernardo David and
+               Roman Oliynykov},
+  title     = {Ouroboros: {A} Provably Secure Proof-of-Stake Blockchain Protocol},
+  booktitle = {Advances in Cryptology - {CRYPTO} 2017 - 37th Annual International
+               Cryptology Conference, Santa Barbara, CA, USA, August 20-24, 2017,
+               Proceedings, Part {I}},
+  pages     = {357--388},
+  year      = {2017}
+}
+  crossref  = {DBLP:conf/crypto/2017-1},
+  url       = {https://doi.org/10.1007/978-3-319-63688-7_12},
+  doi       = {10.1007/978-3-319-63688-7_12},
+  timestamp = {Mon, 14 Aug 2017 14:34:46 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/crypto/KiayiasRDO17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+
+
+@article{BPS16a,
+  author    = {Iddo Bentov and
+               Rafael Pass and
+               Elaine Shi},
+  title     = {Snow White: Provably Secure Proofs of Stake},
+  journal   = {{IACR} Cryptology ePrint Archive},
+  volume    = {2016},
+  pages     = {919},
+  year      = {2016}
+}
+  url       = {http://eprint.iacr.org/2016/919},
+  timestamp = {Thu, 08 Jun 2017 14:26:43 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/iacr/BentovPS16a},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+
+
+@inproceedings{SOSP:GHMVZ17,
+  author    = {Yossi Gilad and
+               Rotem Hemo and
+               Silvio Micali and
+               Georgios Vlachos and
+               Nickolai Zeldovich},
+  title     = {Algorand: Scaling Byzantine Agreements for Cryptocurrencies},
+  booktitle = {Proceedings of the 26th Symposium on Operating Systems Principles,
+               Shanghai, China, October 28-31, 2017},
+  pages     = {51--68},
+  year      = {2017}
+}
+  crossref  = {DBLP:conf/sosp/2017},
+  url       = {http://doi.acm.org/10.1145/3132747.3132757},
+  doi       = {10.1145/3132747.3132757},
+  timestamp = {Thu, 19 Oct 2017 21:48:10 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/sosp/GiladHMVZ17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+  
+  @inproceedings{DISC:PasShi17,
+  author    = {Rafael Pass and
+               Elaine Shi},
+  title     = {Hybrid Consensus: Efficient Consensus in the Permissionless Model},
+  booktitle = {31st International Symposium on Distributed Computing, {DISC} 2017,
+               October 16-20, 2017, Vienna, Austria},
+  pages     = {39:1--39:16},
+  year      = {2017},
+  url       = {https://doi.org/10.4230/LIPIcs.DISC.2017.39},
+  doi       = {10.4230/LIPIcs.DISC.2017.39},
+  timestamp = {Sat, 11 Nov 2017 15:51:51 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/wdag/PassS17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{AC:PasShi17,
+  author    = {Rafael Pass and
+               Elaine Shi},
+  title     = {The Sleepy Model of Consensus},
+  booktitle = {Advances in Cryptology - {ASIACRYPT} 2017 - 23rd International Conference
+               on the Theory and Applications of Cryptology and Information Security,
+               Hong Kong, China, December 3-7, 2017, Proceedings, Part {II}},
+  pages     = {380--409},
+  year      = {2017},
+  url       = {https://doi.org/10.1007/978-3-319-70697-9\_14},
+  doi       = {10.1007/978-3-319-70697-9\_14},
+  timestamp = {Wed, 22 Nov 2017 13:48:27 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/asiacrypt/PassS17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{EC:PasShi18,
+  author    = {Rafael Pass and
+               Elaine Shi},
+  title     = {Thunderella: Blockchains with Optimistic Instant Confirmation},
+  booktitle = {Advances in Cryptology - {EUROCRYPT} 2018 - 37th Annual International
+               Conference on the Theory and Applications of Cryptographic Techniques,
+               Tel Aviv, Israel, April 29 - May 3, 2018 Proceedings, Part {II}},
+  pages     = {3--33},
+  year      = {2018},
+  url       = {https://doi.org/10.1007/978-3-319-78375-8\_1},
+  doi       = {10.1007/978-3-319-78375-8\_1},
+  timestamp = {Mon, 16 Apr 2018 14:06:24 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/eurocrypt/PassS18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 
 % Payment networks
@@ -664,6 +874,34 @@
 }
 
 % IOTA-style ledger
+@article{ePrint:SomLewZoh16,
+  author    = {Yonatan Sompolinsky and
+               Yoad Lewenberg and
+               Aviv Zohar},
+  title     = {{SPECTRE:} {A} Fast and Scalable Cryptocurrency Protocol},
+  journal   = {{IACR} Cryptology ePrint Archive},
+  volume    = {2016},
+  pages     = {1159},
+  year      = {2016},
+  url       = {http://eprint.iacr.org/2016/1159},
+  timestamp = {Thu, 08 Jun 2017 14:26:36 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/iacr/SompolinskyLZ16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{eprint:SomZoh18,
+  author    = {Yonatan Sompolinsky and
+               Aviv Zohar},
+  title     = {{PHANTOM:} {A} Scalable BlockDAG Protocol},
+  journal   = {{IACR} Cryptology ePrint Archive},
+  volume    = {2018},
+  pages     = {104},
+  year      = {2018},
+  url       = {http://eprint.iacr.org/2018/104},
+  timestamp = {Tue, 20 Mar 2018 14:34:22 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/iacr/SompolinskyZ18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 % Unsure
 @inproceedings{NSDI:EGSR16,
