Working through challenges

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -54,3 +54,16 @@ Currently, almost 70\% of Bitcoin blocks are mined by the five largest pools \ci
 
 Bitcoin is also an illustrative example for another inefficiency of public blockchains at scale: the energy consumption of proof-of-work consensus. According to one estimate\cite{Digiconomist}, as of April 2018 the energy consumed by Bitcoin miners is equivalent to the power usage of almost 5.5 million US households, and all signs indicate that it will continue to grow. A similar problem is likely to arise in any scheme where proof-of-work is deployed. It may be surpassable if alternative consensus protocols such as proof-of-stake are used, but there are other problems to work out with such schemes (in particular, a worsening of the emergent centralization problem discussed above). 
 
+\noindent
+\textbf{Academic refs:}
+\begin{enumerate}
+\item ~\cite{CRYPTO:KRDO17} - provably secure proof of stake
+\item ~\cite{eprint:BenPasShi16} - provably secure proof of stake
+\item ~\cite{SOSP:GHMVZ17} - ALGORAND - provably secure proof of stake.  Works in both permissioned and permissionless setting
+\item ~\cite{FC:BenGabMiz16} - original academic PoS proposal?
+\item ~\cite{CRYPTO:DFKP15} - proof of space
+\item ~\cite{eprint:PPKAFG15} - blockchain based on proof of space
+\item ~\cite{OPODIS:AMNRS17} - Improves bitcoin confirmation time, based on reconfigurable byzantine consensus augmented with PoW.
+
+\end{enumerate}
+
