--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -665,7 +665,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 
 
-@article{BPS16a,
+@article{eprint:BenPasShi16,
   author    = {Iddo Bentov and
                Rafael Pass and
                Elaine Shi},
@@ -675,11 +675,6 @@
   pages     = {919},
   year      = {2016}
 }
-  url       = {http://eprint.iacr.org/2016/919},
-  timestamp = {Thu, 08 Jun 2017 14:26:43 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/iacr/BentovPS16a},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-
 
 @inproceedings{SOSP:GHMVZ17,
   author    = {Yossi Gilad and
@@ -693,14 +688,25 @@
   pages     = {51--68},
   year      = {2017}
 }
-  crossref  = {DBLP:conf/sosp/2017},
-  url       = {http://doi.acm.org/10.1145/3132747.3132757},
-  doi       = {10.1145/3132747.3132757},
-  timestamp = {Thu, 19 Oct 2017 21:48:10 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/sosp/GiladHMVZ17},
+
+@inproceedings{FC:BenGabMiz16,
+  author    = {Iddo Bentov and
+               Ariel Gabizon and
+               Alex Mizrahi},
+  title     = {Cryptocurrencies Without Proof of Work},
+  booktitle = {Financial Cryptography and Data Security - {FC} 2016 International
+               Workshops, BITCOIN, VOTING, and WAHC, Christ Church, Barbados, February
+               26, 2016, Revised Selected Papers},
+  pages     = {142--157},
+  year      = {2016},
+  url       = {https://doi.org/10.1007/978-3-662-53357-4\_10},
+  doi       = {10.1007/978-3-662-53357-4\_10},
+  timestamp = {Wed, 30 May 2018 16:11:58 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/fc/BentovGM16},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
   
-  @inproceedings{DISC:PasShi17,
+@inproceedings{DISC:PasShi17,
   author    = {Rafael Pass and
                Elaine Shi},
   title     = {Hybrid Consensus: Efficient Consensus in the Permissionless Model},
@@ -744,6 +750,60 @@
   doi       = {10.1007/978-3-319-78375-8\_1},
   timestamp = {Mon, 16 Apr 2018 14:06:24 +0200},
   biburl    = {https://dblp.org/rec/bib/conf/eurocrypt/PassS18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{CRYPTO:DFKP15,
+  author    = {Stefan Dziembowski and
+               Sebastian Faust and
+               Vladimir Kolmogorov and
+               Krzysztof Pietrzak},
+  title     = {Proofs of Space},
+  booktitle = {Advances in Cryptology - {CRYPTO} 2015 - 35th Annual Cryptology Conference,
+               Santa Barbara, CA, USA, August 16-20, 2015, Proceedings, Part {II}},
+  pages     = {585--605},
+  year      = {2015},
+  url       = {https://doi.org/10.1007/978-3-662-48000-7\_29},
+  doi       = {10.1007/978-3-662-48000-7\_29},
+  timestamp = {Fri, 26 May 2017 00:50:20 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/crypto/DziembowskiFKP15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{eprint:PPKAFG15,
+  author    = {Sunoo Park and
+               Krzysztof Pietrzak and
+               Albert Kwon and
+               Jo{\"{e}}l Alwen and
+               Georg Fuchsbauer and
+               Peter Gazi},
+  title     = {Spacemint: {A} Cryptocurrency Based on Proofs of Space},
+  journal   = {{IACR} Cryptology ePrint Archive},
+  volume    = {2015},
+  pages     = {528},
+  year      = {2015},
+  url       = {http://eprint.iacr.org/2015/528},
+  timestamp = {Thu, 08 Jun 2017 14:26:36 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/iacr/ParkPAFG15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{OPODIS:AMNRS17,
+  author    = {Ittai Abraham and
+               Dahlia Malkhi and
+               Kartik Nayak and
+               Ling Ren and
+               Alexander Spiegelman},
+  title     = {Solida: {A} Blockchain Protocol Based on Reconfigurable Byzantine
+               Consensus},
+  booktitle = {21st International Conference on Principles of Distributed Systems,
+               {OPODIS} 2017, Lisbon, Portugal, December 18-20, 2017},
+  pages     = {25:1--25:19},
+  year      = {2017},
+  url       = {https://doi.org/10.4230/LIPIcs.OPODIS.2017.25},
+  doi       = {10.4230/LIPIcs.OPODIS.2017.25},
+  timestamp = {Wed, 28 Mar 2018 11:20:30 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/opodis/AbrahamMN0S17},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
