Working through challenges

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -657,13 +657,7 @@
   pages     = {357--388},
   year      = {2017}
 }
-  crossref  = {DBLP:conf/crypto/2017-1},
-  url       = {https://doi.org/10.1007/978-3-319-63688-7_12},
-  doi       = {10.1007/978-3-319-63688-7_12},
-  timestamp = {Mon, 14 Aug 2017 14:34:46 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/crypto/KiayiasRDO17},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-
+  
 
 @article{eprint:BenPasShi16,
   author    = {Iddo Bentov and
@@ -734,22 +728,6 @@
   doi       = {10.1007/978-3-319-70697-9\_14},
   timestamp = {Wed, 22 Nov 2017 13:48:27 +0100},
   biburl    = {https://dblp.org/rec/bib/conf/asiacrypt/PassS17},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{EC:PasShi18,
-  author    = {Rafael Pass and
-               Elaine Shi},
-  title     = {Thunderella: Blockchains with Optimistic Instant Confirmation},
-  booktitle = {Advances in Cryptology - {EUROCRYPT} 2018 - 37th Annual International
-               Conference on the Theory and Applications of Cryptographic Techniques,
-               Tel Aviv, Israel, April 29 - May 3, 2018 Proceedings, Part {II}},
-  pages     = {3--33},
-  year      = {2018},
-  url       = {https://doi.org/10.1007/978-3-319-78375-8\_1},
-  doi       = {10.1007/978-3-319-78375-8\_1},
-  timestamp = {Mon, 16 Apr 2018 14:06:24 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/eurocrypt/PassS18},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
@@ -824,6 +802,15 @@
   timestamp = {Tue, 16 Jan 2018 15:44:17 +0100},
   biburl    = {https://dblp.org/rec/bib/conf/ndss/HeilmanABSG17},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@report{PooDry16,
+  author	= {Joseph Poon and
+  		Thaddeus Dryja},
+  title		= {The Bitcoin Lightning Network:
+Scalable off-chain instant payments},
+  howpublished = {Technical Report (draft
+0.5.9.1)},
 }
 
 @inproceedings{SYSTOR:LNEKPS18,
@@ -934,6 +921,38 @@
 }
 
 % IOTA-style ledger
+@inproceedings{EC:PasShi18,
+  author    = {Rafael Pass and
+               Elaine Shi},
+  title     = {Thunderella: Blockchains with Optimistic Instant Confirmation},
+  booktitle = {Advances in Cryptology - {EUROCRYPT} 2018 - 37th Annual International
+               Conference on the Theory and Applications of Cryptographic Techniques,
+               Tel Aviv, Israel, April 29 - May 3, 2018 Proceedings, Part {II}},
+  pages     = {3--33},
+  year      = {2018},
+  url       = {https://doi.org/10.1007/978-3-319-78375-8\_1},
+  doi       = {10.1007/978-3-319-78375-8\_1},
+  timestamp = {Mon, 16 Apr 2018 14:06:24 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/eurocrypt/PassS18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{FC:SomZoh15,
+  author    = {Yonatan Sompolinsky and
+               Aviv Zohar},
+  title     = {Secure High-Rate Transaction Processing in Bitcoin},
+  booktitle = {Financial Cryptography and Data Security - 19th International Conference,
+               {FC} 2015, San Juan, Puerto Rico, January 26-30, 2015, Revised Selected
+               Papers},
+  pages     = {507--527},
+  year      = {2015},
+  url       = {https://doi.org/10.1007/978-3-662-47854-7\_32},
+  doi       = {10.1007/978-3-662-47854-7\_32},
+  timestamp = {Fri, 26 May 2017 00:50:27 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/fc/SompolinskyZ15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{ePrint:SomLewZoh16,
   author    = {Yonatan Sompolinsky and
                Yoad Lewenberg and
