Working through challenges

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -785,6 +785,21 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{eprint:FanZho17,
+  author    = {Lei Fan and
+               Hong{-}Sheng Zhou},
+  title     = {iChing: {A} Scalable Proof-of-Stake Blockchain in the Open Setting
+               (or, How to Mimic Nakamoto's Design via Proof-of-Stake)},
+  journal   = {{IACR} Cryptology ePrint Archive},
+  volume    = {2017},
+  pages     = {656},
+  year      = {2017},
+  url       = {http://eprint.iacr.org/2017/656},
+  timestamp = {Tue, 25 Jul 2017 16:35:21 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/iacr/FanZ17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 
 % Payment networks
 
