--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -67,6 +67,7 @@ Proof of stake:
 \item ~\cite{CRYPTO:DFKP15} - proof of space
 \item ~\cite{eprint:PPKAFG15} - blockchain based on proof of space
 \item ~\cite{OPODIS:AMNRS17} - Improves bitcoin confirmation time, based on reconfigurable byzantine consensus augmented with PoW.
+\item ~\cite{eprint:FanZho17} - aim to mimic Nakamoto design via PoS
 \end{enumerate}
 Payment-channel networks:
 \begin{enumerate}
